# djavue

./: .dockerignore  .flake8  .gitignore  EXCALIDRAW.excalidraw  README.md  compose.yaml  compose.yml  conftest.py  dockerfile  index.html  package-lock.json  package.json  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  vite.config.js  vitest.config.js
backend/: TODO  manage.py  pyproject.toml
backend/authentication/: schemas.py  serializers.py  urls.py  views.py
backend/djavue/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/tasks/: models.py  schemas.py  serializers.py  services.py  urls.py  views.py
backend/tasks/migrations/: 0001_initial.py  0002_rename_content_task_description.py  0002_rename_is_done_task_is_deleted.py
blog/: admin.py  forms.py  models.py  serializer.py  service.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_slug.py  0003_rename_posted_at_post_published_at.py
djavue/: settings.py  urls.py
frontend/: .env.development  .eslintrc  .eslintrc.cjs  .gitignore  .prettierrc  .prettierrc.json  README.md  dockerfile  env.d.ts  index.html  jsconfig.json  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  router.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vite.d.ts  vitest.config.ts
frontend/.storybook/: main.js  (+2 more)
nginx/: default.conf
post/: models.py
src/: App.vue  main.js
user/: forms.py  serializer.py  service.py  urls.py  views.py
(+134 files in other folders)
